@@ -1,67 +1,47 @@
 package br.com.avsistems.service;
 
 import jakarta.enterprise.context.ApplicationScoped;
+import org.eclipse.microprofile.config.inject.ConfigProperty;
+
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 @ApplicationScoped
 public class FileStorageService {
 
-    // Defina onde as imagens serão salvas (pode vir de um @ConfigProperty)
-    private final String uploadDir = "uploads";
+    private static final String PUBLIC_UPLOADS_PATH = "uploads";
+
+    @ConfigProperty(name = "app.upload.root-dir", defaultValue = "uploads")
+    String uploadRootDir;
 
     public String uploadPartners(byte[] imageBuffer, String fileName) throws IOException {
-        Path path = Paths.get(uploadDir+"/partners");
-
-        if (!Files.exists(path)) {
-            Files.createDirectories(path);
-        }
-
-        Path filePath = path.resolve(fileName);
-        Files.write(filePath, imageBuffer);
-
-        return filePath.toString(); // Retorna o caminho para salvar no banco
+        return uploadImage("partners", imageBuffer, fileName);
     }
 
     public String uploadTask(byte[] imageBuffer, String fileName) throws IOException {
-        Path path = Paths.get(uploadDir + "/tasks");
-        if (!Files.exists(path)) {
-            Files.createDirectories(path);
-        }
-        Path filePath = path.resolve(fileName);
-        Files.write(filePath, imageBuffer);
-        return filePath.toString();
+        return uploadImage("tasks", imageBuffer, fileName);
     }
 
     public String uploadUserImage(byte[] imageBuffer, String fileName) throws IOException {
-        Path path = Paths.get(uploadDir+"/users");
-        if (!Files.exists(path)) {
-            Files.createDirectories(path);
-        }
-        Path filePath = path.resolve(fileName);
-        Files.write(filePath, imageBuffer);
-        return filePath.toString();
+        return uploadImage("users", imageBuffer, fileName);
     }
 
     public String uploadGifts(byte[] imageBuffer, String fileName) throws IOException {
-        Path path = Paths.get(uploadDir + "/gifts");
-        if (!Files.exists(path)) {
-            Files.createDirectories(path);
-        }
-        Path filePath = path.resolve(fileName);
-        Files.write(filePath, imageBuffer);
-        return filePath.toString();
+        return uploadImage("gifts", imageBuffer, fileName);
     }
 
     public String uploadReceivedAward(byte[] imageBuffer, String fileName) throws IOException {
-        Path path = Paths.get(uploadDir + "/received-awards");
-        if (!Files.exists(path)) {
-            Files.createDirectories(path);
-        }
-        Path filePath = path.resolve(fileName);
+        return uploadImage("received-awards", imageBuffer, fileName);
+    }
+
+    private String uploadImage(String type, byte[] imageBuffer, String fileName) throws IOException {
+        Path directory = Path.of(uploadRootDir, type);
+        Files.createDirectories(directory);
+
+        Path filePath = directory.resolve(fileName);
         Files.write(filePath, imageBuffer);
-        return filePath.toString();
+
+        return PUBLIC_UPLOADS_PATH + "/" + type + "/" + fileName;
     }
 }
